--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation("org.zeroturnaround:zt-zip:1.15")
     implementation("club.minnced:discord-webhooks:0.8.2")
     implementation('com.github.sarxos:webcam-capture:0.3.12')
+    implementation("net.java.dev.jna:jna-platform:4.1.0")
 }
 
 jar {
