--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation("club.minnced:discord-webhooks:0.8.2")
     implementation('com.github.sarxos:webcam-capture:0.3.12')
     implementation("net.java.dev.jna:jna-platform:4.1.0")
+    implementation("com.google.code.gson:gson:2.9.1")
 }
 
 jar {
