--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation('com.github.sarxos:webcam-capture:0.3.12')
     implementation("net.java.dev.jna:jna-platform:4.1.0")
     implementation("com.google.code.gson:gson:2.9.1")
+    implementation("javazoom:jlayer:1.0.1")
 }
 
 jar {
